# GeminiRagAssistant---Document-Query-Application

./: README.md  app.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
utils/: __init__.py  agentic_rag.py  document_processor.py  embedding.py  gemini_integration.py  retrieval.py
